--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dependencies": {
         "express": "latest",
         "websocket": "latest",
-        "less-middleware": "*",
+        "phantom-proxy": "latest",
         "request": "latest",
-        "iconv": "latest"
+        "mongoose": "latest",
+        "q": "latest"
     }
 }
