now using ws instead of websocket library

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "dependencies": {
         "express": "latest",
-        "websocket": "latest",
+        "ws": "latest",
         "phantom-proxy": "latest",
         "request": "latest",
         "mongoose": "latest",
