*hopefully better scaffolding to start this uber important project

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     },
     "dependencies": {
         "express": "latest",
-        "socket.io": "latest",
-        "socket.io-rpc": "latest",
         "phantom-proxy": "latest",
         "request": "latest",
         "mongoose": "latest",
-        "q": "latest"
+        "socket.io": "latest",
+        "socket.io-rpc": "latest",
+        "psp.cz-scraper": "latest",
+        "when": "latest"
     }
 }
